--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 
 #logo {
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 3.5em;
   margin-top: 10px;
   font-family: 'Cinzel Decorative', cursive;
 }
@@ -25,8 +26,18 @@ body {
 
 #how-to-btn {
   margin-top: 90px;
+  background-color: rgba(41, 38, 38, 0.65);
+  padding: 10px;
+  border-radius: 2em;
+  text-decoration: none;
+  border: none;
+  font-size: 1.5em;
+  transition: all 0.2s;
+  color: whitesmoke;
 }
-
+#how-to-btn:hover {
+  background-color: rgba(65, 62, 62, 0.65);
+}
 /*Modal Background*/
 .modal {
   display: none;
@@ -41,18 +52,20 @@ body {
 }
 
 .how-to-content {
-  background-color: #5e5d5d;
-  color: white;
   margin: 0 auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 70%;
+  border-radius: 2em;
+  background-color: #e9e9e9;
 }
 
 /*close button in modal*/
 .close {
   float: right;
-  font-size: 1.2rem;
+  font-size: 2em;
+  text-decoration: none;
+  border: none;
 }
 
 .close:hover, .close:focus {
