--- a/assets/style.css
+++ b/assets/style.css
@@ -151,6 +151,43 @@ body {
 
 /*oracle tab content*/
 
+/*text reveal box*/
+
+#text-window {
+  width: 100%;
+  height: 300px;
+}
+
+.buffer {
+  margin-bottom: 100px;
+}
+
+.word {
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Eater', cursive;
+  color: transparent;
+  animation: blur 5s ease-out;
+}
+
+/* .word:nth-child(2) {
+	animation-delay: 0.1s;
+} */
+
+
+
+@keyframes blur {
+	0%	{text-shadow:  0 0 100px #fff; opacity:0;}
+	5%	{text-shadow:  0 0 90px #fff;}
+	15%	{opacity: 1;}
+	20%	{text-shadow:  0 0 0px #fff;}
+	80%	{text-shadow:  0 0 0px #fff;}
+	85%	{opacity: 1;}
+	95%	{text-shadow:  0 0 90px #fff;}
+	100% {text-shadow:  0 0 100px #fff; opacity:0;}
+}
+
+/*bottom row*/
 #chaos {
   width: 30%;
   bottom: 0;
