--- a/assets/style.css
+++ b/assets/style.css
@@ -229,6 +229,63 @@ body {
   background-color: rgba(184, 180, 180, 0.55);
 }
 
+#odds-container {
+  position: absolute;
+  bottom: 90px;
+  left: 0; right: 0;
+  margin: auto;  
+  width: 30%;
+  height: 60px;
+  cursor: initial;
+  display: flex;
+  justify-content: center;
+  display: none;
+  background-color: rgba(184, 180, 180, 0.2);
+  padding: 2px;
+  border-radius: 1.1em;
+  text-decoration: none;
+  border: none;
+  font-size: 1.5em;
+  transition: all 0.2s;
+  color: whitesmoke;
+}
+
+.odds-value {
+  margin: 15px 0;
+}
+.odds-slider {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 10%;
+  width: auto;
+  
+  padding: 16px;
+  color: whitesmoke;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  color: rgba(184, 180, 180, 0.55);
+}
 
 #footer {
   display: flex;
@@ -268,3 +325,5 @@ body {
   }
 }
 
+
+ 
