--- a/assets/style.css
+++ b/assets/style.css
@@ -211,7 +211,7 @@ body {
   justify-content: center;
 }
 
-#question-btn, #event-btn {
+#question-btn, #event-btn, #title {
   background-color: rgba(184, 180, 180, 0.2);
   padding: 2px;
   border-radius: 1.1em;
@@ -229,25 +229,42 @@ body {
   background-color: rgba(184, 180, 180, 0.55);
 }
 
-#odds-container {
+#odds-container, #odds-header, #set-odds {
   position: absolute;
-  bottom: 90px;
   left: 0; right: 0;
-  margin: auto;  
-  width: 30%;
+  margin: auto; 
+  width: 33%;
   height: 60px;
-  cursor: initial;
   display: flex;
   justify-content: center;
-  display: none;
+  font-size: 1.5em;
+  color: whitesmoke;
+}
+#odds-container {
+  top: 50%;
+  cursor: initial;
   background-color: rgba(184, 180, 180, 0.2);
   padding: 2px;
   border-radius: 1.1em;
   text-decoration: none;
   border: none;
-  font-size: 1.5em;
   transition: all 0.2s;
+}
+
+#odds-header {
+  top: 40%;
+}
+
+#set-odds {
+  top: 62%;
+}
+
+#set-odds-button {
+  font-size: 1.8em;
+  background-color: black;
+  border: none;
   color: whitesmoke;
+  cursor: pointer;
 }
 
 .odds-value {
@@ -286,6 +303,29 @@ body {
 .prev:hover, .next:hover {
   color: rgba(184, 180, 180, 0.55);
 }
+
+.odds-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
 
 #footer {
   display: flex;
