--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ body {
 /*Emulator*/
 #emulator {
   width: 100%;
-  height: 50vh;
+  height: 65vh;
   display: flex;
   justify-content: center;
 }
@@ -238,6 +238,7 @@ body {
   font-size: 1.5em;
   color: whitesmoke;
 }
+
 #odds-container {
   top: 30%;
   cursor: initial;
@@ -269,6 +270,7 @@ body {
 .odds-value {
   margin: 15px 0;
 }
+
 .odds-slider {
   display: none;
 }
@@ -338,7 +340,7 @@ body {
 
 /*media queries*/
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
   #odds-container {
     width: 70%;
   }
@@ -358,23 +360,24 @@ body {
   #odds-header {
     font-size: 1em;
   }
-}
 
-@media screen and (max-height: 660px) {
-  #odds-header, #odds-container, #set-odds {
-    font-size: 1em;
-    height: 40px;
-  }
-
-  .prev, .next {
-    top: -10%;
+  .odds-value {
+    font-size: .8em;
   }
 }
 
-@media screen and (max-width: 345px) {
+@media screen and (max-width: 400px){
+
+  .word {
+    font-size: 1.6em;
+  }
+}
+
+@media screen and (max-width: 375px) {
   #chaos, .tab, #question-btn, #event-btn {
     font-size: 0.68em;
   }
+
   #how-to-btn {
     margin-top: 30px;
   }
@@ -383,7 +386,38 @@ body {
     left: 40%;
     margin-bottom: 20px;
   }
+  .odds-value {
+    font-size: 0.7em;
+  }
+}
 
+@media screen and (max-height: 660px) {
+  #odds-header, #odds-container, #set-odds {
+    font-size: 1em;
+    height: 40px;
+  }
 
+  #odds-container {
+    top: 35%;
+  }
 
- 
+  .prev, .next {
+    top: -10%;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  #emulator {
+    height: 80vh;
+  }
+}
+@media screen and (max-height: 400px) {
+  .word {
+    font-size: 1.5em;
+  }
+  #chaos, #question-btn, #event-btn {
+    font-size: 0.68em;
+    height: 30px;
+  }
+  
+}
