--- a/assets/style.css
+++ b/assets/style.css
@@ -424,13 +424,13 @@ ul {
   position: absolute;
   right: 0;
   top: 0;
-  padding: 12px 16px 12px 16px;
+  background-color: rgba(0,0,0,0.1);
+  color: whitesmoke;
 }
 
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
+/* .close:hover {
+  color: ;
+} */
 
 ul li {
   cursor: pointer;
@@ -439,8 +439,13 @@ ul li {
   padding: 12px 8px 12px 40px;
   font-size: 1.5em;
   transition: 0.2s;
-  width: 70%;
-  margin: 0 5%;
+  width: 32.5%;
+  margin: 0 2.5%;
+  display: inline-block;
+}
+
+.checked {
+  text-decoration: line-through;
 }
 
 #threads {
