--- a/assets/style.css
+++ b/assets/style.css
@@ -91,9 +91,10 @@ body {
 
 /*tabs*/
 #tab-container {
-  width: 100%;
+  width: 80%;
+  margin: 0 10%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .tab {
@@ -373,10 +374,16 @@ body {
 }
 
 #characters {
-  width: 70%;
+  width: 60%;
   height: 100%;
   overflow: auto;
 }
+
+#threads {
+  width: 40%;
+  height: 100%;
+  overflow: auto;
+ }
 
 ::-webkit-scrollbar {
   width: 2px;
@@ -449,19 +456,13 @@ ul li {
   position: relative;
   color: whitesmoke;
   padding: 12px 8px 12px 40px;
-  font-size: 1.5em;
+  font-size: 1.4em;
   transition: 0.2s;
   width: 60%;
   margin: 0 2.5%;
   display: inline-block;
 }
 
-
-#threads {
- width: 30%;
- height: 100%;
- overflow: auto;
-}
 
 /* footer */
 #footer {
@@ -486,6 +487,38 @@ ul li {
   }
 }
 
+@media screen and (max-width: 870px){
+  .header {
+    font-size: 1.1em;
+  }
+  .addBtn {
+    font-size: 1.5em;
+    padding: 2px;
+  }
+}
+
+@media screen and (max-width: 700px){
+  #characters {
+    width: 100%;
+    height: 49%;
+    margin: 1% auto;
+  }
+  #threads {
+    width: 100%;
+    height: 48%;
+    margin: 1% auto;
+  }
+  #list-container {
+    display: block;
+  }
+  .header {
+    margin: 0 auto;
+  }
+  ul li {
+    font-size: 1.2em;
+  }
+ 
+}
 @media screen and (max-width: 500px) {
   #chaos, .fate-qs {
     font-size: 0.9em;
@@ -503,6 +536,19 @@ ul li {
 
   .odds-value {
     font-size: .8em;
+  }
+
+  #emulator-window{
+    width: 95%;
+    margin: 0 2.5%;
+  }
+  
+  .tabcontent {
+    width: 100%;
+  }
+  #tab-container {
+    width: 95%;
+    margin: 0 2.5%;
   }
 }
 
@@ -532,6 +578,27 @@ ul li {
   #chaos-prev, #chaos-next {
     bottom: 20px;
   }
+  #emulator {
+    height: 100vh;
+  }
+  #logo {
+    font-size: 1.8em;
+  }
+  #how-to-btn {
+    font-size: 1.1em;
+  }
+  #sound {
+  font-size: 2.5em;
+}
+#characters {
+  height: 49vh;
+}
+#threads {
+  height: 49vh;
+}
+ul li {
+  font-size: 1em;
+}
 }
 
 @media screen and (max-height: 660px) {
@@ -549,10 +616,19 @@ ul li {
   }
 }
 
-@media screen and (max-height: 500px) {
+@media screen and (max-height: 550px) {
   #emulator {
-    height: 80vh;
+    height: 100vh;
   }
+  #logo {
+    font-size: 1.8em;
+  }
+  #how-to-btn {
+    font-size: 1.1em;
+  }
+  #sound {
+  font-size: 2.5em;
+}
 }
 @media screen and (max-height: 400px) {
   .word {
