--- a/assets/style.css
+++ b/assets/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 /*close button in modal*/
-.close {
+#close-how-to {
   float: right;
   font-size: 2em;
   text-decoration: none;
@@ -83,7 +83,7 @@ body {
   background-color: #e9e9e9;
 }
 
-.close:hover, .close:focus {
+#close-how-to:hover, #close-how-to:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -368,12 +368,12 @@ body {
 
 #scene-window {
   width: 100%;
-  height: 500px;
+  height: 55vh;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   overflow-y: scroll;
-  padding: 2.5% 0 2.5% 10%;
+  padding: 2.5% 0 2.5% 9%;
 }
 
 .scene-box {
@@ -382,12 +382,35 @@ body {
   margin: 2px;
   border: 1px solid white;
   border-radius: 1.1em;
+  position: relative;
 }
 
 .scene-box input {
   display: block;
   margin: 0 auto;
+}
 
+.scene-box textarea {
+  background-color: black;
+  border: none;
+  resize: none;
+  width: 90%;
+  height: 60%;
+  display: block;
+  margin: 10px auto;
+  outline: none;
+  text-decoration: underline;
+  color: whitesmoke;
+  font-size: 1.1em;
+  line-height: 25px;
+  letter-spacing: 2px;
+  overflow-y: scroll;
+}
+.scene-close {
+  position: absolute;
+  right: 5%; bottom: 5%;
+  font-size: 2em;
+  cursor: pointer;
 }
 
 #scene-bottom-row {
@@ -476,6 +499,7 @@ ul {
   top: 0;
   background-color: rgba(0,0,0,0.1);
   color: whitesmoke;
+  font-size: 1.8em;
 }
 
 /* .close:hover {
@@ -525,6 +549,12 @@ ul li {
   .addBtn {
     font-size: 1.5em;
     padding: 2px;
+  }
+  .scene-box {
+    width: 45%;
+  }
+  .scene-box textarea {
+    font-size: .8em;
   }
 }
 
@@ -580,6 +610,12 @@ ul li {
   #tab-container {
     width: 95%;
     margin: 0 2.5%;
+  }
+  .scene-box {
+    width: 90%;
+  }
+  .scene-box textarea {
+    font-size: .7em;
   }
 }
 
