--- a/assets/style.css
+++ b/assets/style.css
@@ -85,7 +85,8 @@ body {
   font-size: 2em;
   text-decoration: none;
   border: none;
-  background-color: #e9e9e9;
+  background-color: rgba(233,233,233,0.1);
+  position: fixed; right: 15%;
 }
 
 #close-how-to:hover, #close-how-to:focus {
