--- a/assets/style.css
+++ b/assets/style.css
@@ -542,6 +542,16 @@ ul li {
   letter-spacing: 10px;
 }
 
+#footer i:hover {
+  font-size: 2.2em;
+  animation: color 2s infinite linear;
+}
+
+#footer a {
+  color: black;
+}
+
+
 /*media queries*/
 
 @media screen and (max-width: 900px) {
