--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ body {
 #logo {
   text-align: center;
   font-size: 3.5em;
-  margin-top: 10px;
+  padding-top: 10px;
   font-family: 'Cinzel Decorative', cursive;
 }
 
@@ -55,7 +55,6 @@ body {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.4);
 }
 
 .how-to-content {
@@ -71,6 +70,7 @@ body {
 
 .how-to-content p, h3 {
   text-align: center;
+  letter-spacing: 1px;
 }
 
 /*close button in modal*/
@@ -96,6 +96,11 @@ body {
 
 .how-to-content::-webkit-scrollbar-thumb {
   background: black;
+}
+
+iframe {
+  display: block;
+  margin: 0 auto;
 }
 
 /*tabs*/
@@ -547,7 +552,7 @@ ul li {
 #footer {
   display: flex;
   justify-content: center;
-  margin: 50px 0;
+  padding: 50px 0;
 }
 
 #footer i {
