add media query to fix width of iframe at smaller screen width - was causing how to modal overflow to scroll in x axis

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,6 @@ body {
 iframe {
   display: block;
   margin: 0 auto;
-  width: 80%;
 }
 
 /*tabs - container to hold .tab at the end and then the individual tab buttons*/
@@ -589,6 +588,9 @@ ul li {
   }
   .scene-box textarea {
     font-size: .8em;
+  }
+  iframe {
+    width: 80%;
   }
 }
 
