--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ body {
   overflow-y: scroll;
 }
 
-.how-to-content p, h3, h4 {
+.how-to-content a, p, h3, h4 {
   text-align: center;
   letter-spacing: 1px;
 }
@@ -105,6 +105,10 @@ body {
 iframe {
   display: block;
   margin: 0 auto;
+}
+
+.small-display{
+  display: none;
 }
 
 /*tabs - container to hold .tab at the end and then the individual tab buttons*/
@@ -667,8 +671,28 @@ ul li {
   #chaos-txt{
     font-size: 1em;
   }
+
   #how-to-btn {
     margin-top: 30px;
+  }
+
+  .how-to-content {
+    height: 90vh;
+    width: 85vw;
+    position: relative;
+    bottom: 7%
+  }
+
+  .extra {
+    display: none;
+  }
+
+  .small-display{
+    display: initial;
+  }
+
+  a .small-display{
+    text-align: center;
   }
 
   .odds-value {
@@ -742,6 +766,9 @@ ul li {
 
   #sound {
   font-size: 2.5em;
+}
+.how-to-content{
+  bottom: 9.5%;
 }
 }
 
