--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ body {
   overflow-y: scroll;
 }
 
-.how-to-content a, p, h3, h4 {
+.how-to-content p, h3, h4 {
   text-align: center;
   letter-spacing: 1px;
 }
@@ -689,10 +689,6 @@ ul li {
 
   .small-display{
     display: initial;
-  }
-
-  a .small-display{
-    text-align: center;
   }
 
   .odds-value {
